# rust-perceptron

./: .gitignore  Cargo.toml  README.md  vue.config.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: HeaderPane.vue
